add components tp app

--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -3,12 +3,6 @@
     <app-recipe-item></app-recipe-item>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail
-      [recipe]="selectedRecipe"
-      *ngIf="selectedRecipe; else infoText"
-    ></app-recipe-detail>
-    <ng-template #infoText>
-      <h5>Please selected a recipe</h5>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
