--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,21 +1,25 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#" class="navbar">Recipe Book</a>
+    <div class="navbar-header" style="cursor: pointer;">
+      <a class="navbar">Recipe Book</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="recipeCliked()">Recipe</a></li>
-        <li><a href="#" (click)="shoppingListCliked()">Shopping List</a></li>
+        <li routerLinkActive="active">
+          <a [routerLink]="['/recipe']">Recipe</a>
+        </li>
+        <li routerLinkActive="active">
+          <a [routerLink]="['/shoppinglist']">Shopping List</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle"
+          <a class="dropdown-toggle cursor-pointer" style="cursor: pointer;"
             >Manage <span class="caret"></span
           ></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fectch Data</a></li>
+          <ul class="dropdown-menu" style="cursor: pointer;">
+            <li><a>Save Data</a></li>
+            <li><a>Fectch Data</a></li>
           </ul>
         </li>
       </ul>
