--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -19,10 +19,10 @@
       <button class="btn btn-primary fropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu cursor-pointer">
+      <ul class="dropdown-menu" style="cursor: pointer;">
         <li><a (click)="onSelectIngredient()"> Shopping List</a></li>
-        <li><a href="#"> Edit Recipe</a></li>
-        <li><a href="#"> Delete Recipe</a></li>
+        <li><a (click)="editRecipe()"> Edit Recipe</a></li>
+        <li><a> Delete Recipe</a></li>
       </ul>
     </div>
   </div>
